# crom2_common

crom2_bringup/: CMakeLists.txt  package.xml
crom2_bringup/config/: rtraj_control.yaml  servos_torso.yaml  servos_torso_head.yaml
crom2_bringup/launch/: inputs_outputs.launch  load_description.launch  pointgrey_cameras.launch  rgbd_camera.launch  rtraj_control.launch  torso_complete.launch  torso_controller.launch  torso_head.launch  ur10_bringup.launch  ur10_left_arm.launch  ur10_right_arm.launch  ur_common.launch
crom2_description/: CMakeLists.txt  package.xml
crom2_description/launch/: crom2.rviz  crom2_no_arms_rviz.launch  crom2_rviz.launch  crom2_ur10_rviz.launch
crom2_description/meshes/: CROM2_base.STL  CROM2_base.dae  CROM2_base_closure.STL  CROM2_base_closure.dae  CROM2_pantilt_1.STL  CROM2_pantilt_1.dae  CROM2_pantilt_1_1.STL  CROM2_pantilt_1_1.dae  CROM2_pantilt_2.STL  CROM2_pantilt_2.dae  CROM2_pantilt_3.STL  CROM2_pantilt_3.dae  CROM2_pantilt_4.STL  CROM2_pantilt_4.dae  CROM2_trunk.STL  CROM2_trunk.dae  CROM2_trunk_closure.STL  CROM2_trunk_closure.dae  FL2-010-R0-camera.STL  FL2-010-R0-camera.dae  dynamixel_L42.STL  dynamixel_L42.dae  xtion_camera.STL  xtion_camera.dae
crom2_description/robots/: crom2.gazebo.xacro  crom2.urdf.xacro  crom2_no_arms.urdf.xacro  crom2_ur10.urdf.xacro  crom2_ur10_no_limits.urdf.xacro
crom2_description/urdf/: crom2_base.urdf.xacro  crom2_head.urdf.xacro  crom2_trunk.urdf.xacro
crom2_description/urdf/gazebo/: crom2_base.gazebo.xacro  crom2_head.gazebo.xacro  crom2_trunk.gazebo.xacro
crom2_tests/: CMakeLists.txt  (+1 more)
(+39 files in other folders)
