<?xml version="1.0"?>
<package>
  <name>crom2_bringup</name>
  <version>0.1.0</version>
  <description>The crom2_bringup package. It contains all the config and launch files to start working with the robot.</description>

  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>robotnik_dpro_controller</run_depend>
  <export>

  </export>
</package>
