<?xml version="1.0"?>
<package>
  <name>crom2_description</name>
  <version>0.1.0</version>
  <description>The crom2_description package.</description>

  <maintainer email="jmrapado@robotnik.es">Jose Rapado</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <license>BSD</license>

  <author email="jmrapado@robotnik.es">Jose Rapado</author>

  <build_depend>ur_description</build_depend>
  <run_depend>ur_description</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>

</package>
